--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.0.7",
     "tailwindcss": "^3.3.3",
-    "tsparticles": "^2.12.0"
+    "tsparticles": "^2.12.0",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-preset-stars": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
