--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.3",
+    "@mui/icons-material": "^6.0.2",
     "netlify-cli": "^16.3.1",
     "particles-bg": "^2.5.5",
     "react": "^18.2.0",
